Test/typing/should_fail/methods_abstract_synchronized.java
package tutu.titi.toto;

class A {

    abstract synchronized void myMethod(){}

}